Fixed delay on mobile phones

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -37,6 +37,7 @@ body {
   margin: 6px;
   font-weight: bold;
   font-size: 150%;
+  touch-action: manipulation;
 }
 
 .legend {
